--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "BotConfiguration": {
+        "BotToken": "1379984187:AAF4ib9EzgcVSMfsiPWRWWa2x93-775x_RU"
     }
-  },
-  "AllowedHosts": "*"
 }
