--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,6 @@
     "AllowedHosts": "*",
     "BotConfiguration": {
         "BotToken": "1379984187:AAF4ib9EzgcVSMfsiPWRWWa2x93-775x_RU"
-    }
+    },
+    "BotToken":"1379984187:AAF4ib9EzgcVSMfsiPWRWWa2x93-775x_RU"
 }
